[package]
name = "rust-uno-r3-blinky"
version = "0.1.0"
authors = ["stormscalestudios <stormscalestudios@gmail.com>"]
edition = "2021"
license = "MIT"

[[bin]]
name = "rust-uno-r3-blinky"
test = false
bench = false

[dependencies]
panic-halt = "0.2.0"
ufmt = "0.2.0"
nb = "1.1.0"
embedded-hal = "1.0"
fugit = "0.3.7"
avr-device = "0.7.0"

[dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
rev = "3c089795cadbbc7fa83f45958128689fee7ba1e4"
features = ["arduino-uno"]

[build-dependencies.proc-macro2]
version = "=1.0.79"

[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"
